[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
game_core = { path = "../game_core" }
logger = { path = "../logger" }
proto_dryb = { path = "../proto_dryb" }
proto_dryb_derive = { path = "../proto_dryb_derive" }
