[package]
name = "proto_dryb_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.70"
proto_dryb = { path = "../proto_dryb" }
quote = "1.0.33"
syn = "2.0.39"
