[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logger = { path = "../logger" }
game_core = { path = "../game_core" }
proto_dryb = { path = "../proto_dryb" }
proto_dryb_derive = { path = "../proto_dryb_derive" }
